--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <title>Martins jakbank</title>
 </head>
 <body>
-    <!-- header -->
-    <div class="top-section">
+    <header>
         <div class="first-menu-container">
             <div class="logo-container">
                 <img src="/logo-white.38b890270c30.png" alt="">
@@ -29,6 +28,6 @@
                     <li>Sök</li>
                 </ul>
             </div>
-    </div>
+    </header>
 </body>
 </html>
