--- a/index.html
+++ b/index.html
@@ -8,26 +8,28 @@
     <title>Martins jakbank</title>
 </head>
 <body>
-    <header>
-        <div class="first-menu-container">
-            <div class="logo-container">
-                <img src="/logo-white.38b890270c30.png" alt="">
-            </div>
-            <div class="first-menu-container-space"></div>
-            <ul class="menu-item-list">
-                <li><a href="">Vardagstjänster</a></li>
-                <li>Medlem</li>
-                <li>Om oss</li>
-                <li>Logga in</li>
-            </ul>
-        </div>
-            <div class="second-menu-container">
+    <div class="top-container">
+        <header>
+            <nav class="first-menu-container">
+                <div class="logo-container">
+                    <img src="/logo-white.38b890270c30.png" alt="">
+                </div>
+                <div class="first-menu-container-space"></div>
+                <ul class="menu-item-list">
+                    <li><a href="">Vardagstjänster</a></li>
+                    <li>Medlem</li>
+                    <li>Om oss</li>
+                    <li>Logga in</li>
+                </ul>
+            </nav>
+            <nav class="second-menu-container">
                 <div class="second-menu-container-space"></div>
                 <ul class="menu-item-list">
                     <li>Kontakt</li>
                     <li>Sök</li>
                 </ul>
-            </div>
-    </header>
+            </nav>
+        </header>
+    </div>
 </body>
 </html>
