--- a/index.html
+++ b/index.html
@@ -1,35 +1,32 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-    <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Martins jakbank</title>
+    <title>martins jakbank</title>
 </head>
 <body>
     <div class="top-container">
-        <header>
-            <nav class="first-menu-container">
-                <div class="logo-container">
-                    <img src="/logo-white.38b890270c30.png" alt="">
-                </div>
-                <div class="first-menu-container-space"></div>
-                <ul class="menu-item-list">
-                    <li><a href="">Vardagstjänster</a></li>
-                    <li>Medlem</li>
-                    <li>Om oss</li>
-                    <li>Logga in</li>
-                </ul>
-            </nav>
-            <nav class="second-menu-container">
-                <div class="second-menu-container-space"></div>
-                <ul class="menu-item-list">
-                    <li>Kontakt</li>
-                    <li>Sök</li>
-                </ul>
-            </nav>
-        </header>
+        <div class="first-menu-container">
+            <div class="logo-container">
+                Logo
+            </div>
+            <div class="list-container">
+                <div>vardagstjänster</div>
+                <div>medlem</div>
+                <div>om oss</div>
+            </div>
+            <div class="first-menu-container-space"></div>
+            <div>logga in</div>
+        </div>
+        <div class="second-menu-container">
+            aa
+        </div>
+        <div class="hero-text-container">
+            htc
+        </div>
     </div>
 </body>
 </html>
