--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <div>logga in</div>
         </div>
         <div class="second-menu-container">
-            aa
+            <div class="second-menucontainer-space"></div>
+            <div class="second-menu-items">items</div>
         </div>
         <div class="hero-text-container">
             htc
