--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
     <div class="top-container">
         <div class="first-menu-container">
             <div class="logo-container">
-                Logo
+                <img src="/logo-white.38b890270c30.png" alt="">
             </div>
             <div class="list-container">
-                <div>vardagstjänster</div>
-                <div>medlem</div>
-                <div>om oss</div>
+                <div><a href="" >Vardagstjänster</a></div>
+                <div><a href="" >Medlem</a></div>
+                <div><a href="" >Om oss</a></div>
             </div>
             <div class="first-menu-container-space"></div>
-            <div>logga in</div>
+            <div>
+            </div>
         </div>
         <div class="second-menu-container">
             <div class="second-menucontainer-space"></div>
@@ -29,5 +30,8 @@
             htc
         </div>
     </div>
+
+    <div><a id="log-in-btn" href="">Logga in</a></div>
+
 </body>
 </html>
